// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedEditor should render correctly with data binding 1`] = `
<div>
  <spacebetween>
    <formfield
      label="Define arrow speed"
    >
      <select
        data-testid="motion-indicator-speed-select"
        options="[object Object],[object Object]"
        placeholder="Choose a speed value"
        selectedarialabel="Selected"
        selectedoption="[object Object]"
      />
    </formfield>
    <box
      font-weight="bold"
      padding="[object Object]"
    >
      Configure Rule
    </box>
    <div
      id="DataBindingEditor"
    >
      [{"component":{"ref":"componentRef1","type":"MotionIndicator","uri":"componentUri","modelType":"componentModelType","shape":"LinearPlane","valueDataBindings":{"speed":{"ruleBasedMapId":"rule-1"}},"config":{"numOfRepeatInY":4,"backgroundColorOpacity":0.5}},"dataBindingName":"speed"},{}]
    </div>
  </spacebetween>
</div>
`;

exports[`SpeedEditor should render correctly with slider shown 1`] = `
<div>
  <spacebetween>
    <formfield
      label="Define arrow speed"
    >
      <select
        data-testid="motion-indicator-speed-select"
        options="[object Object],[object Object]"
        placeholder="Choose a speed value"
        selectedarialabel="Selected"
        selectedoption="[object Object]"
      />
    </formfield>
    <button
      data-testid="motion-indicator-speed-slider-button"
      variant="normal"
    >
      0
      <box
        display="inline"
        margin="[object Object]"
      >
        <icon
          name="caret-down-filled"
        />
      </box>
    </button>
    <div
      id="Slider"
    >
      [{"value":0,"step":0.5,"min":"0","max":"10"},{}]
    </div>
  </spacebetween>
</div>
`;

exports[`SpeedEditor should render correctly without data binding 1`] = `
<div>
  <spacebetween>
    <formfield
      label="Define arrow speed"
    >
      <select
        data-testid="motion-indicator-speed-select"
        options="[object Object],[object Object]"
        placeholder="Choose a speed value"
        selectedarialabel="Selected"
        selectedoption="[object Object]"
      />
    </formfield>
    <button
      data-testid="motion-indicator-speed-slider-button"
      variant="normal"
    >
      0
      <box
        display="inline"
        margin="[object Object]"
      >
        <icon
          name="caret-right-filled"
        />
      </box>
    </button>
  </spacebetween>
</div>
`;
